# resume-builder

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  config.ini  pyproject.toml  resume.py  setup.py
Sample Data/Custom-1/: Header.yaml
Sample Data/Default/: Education.yaml  Header.yaml  Performance profile.yaml
Templates/html/: default.html
Templates/text/: default.txt
resumepy/: __init__.py  builder.py  cli.py  config.py  palettes.py  quickstart.py  resume.py
resumepy/data/: config.ini
resumepy/data/Sample Data/Custom-1/: config.ini
resumepy/sample-data/: Education.yaml  Experience.yaml  Header.yaml  Performance profile.yaml  Skills.yaml
resumepy/themes/CV-1/: CV-1.html
resumepy/themes/alt1/: alt1.html
resumepy/themes/default/: default.html
resumepy/themes/default-txt/: default-txt.txt
resumepy/themes/html/CV/: CV-1-header.html
resumepy/themes/html/headers/: header_default.html
resumepy/themes/modern/: modern.html
src/resumepy/: __init__.py  builder.py  cli.py  config.py
src/resumepy/data/: config.ini
src/resumepy/data/Templates/text/: default.txt
tests/: test_cli.py
