[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resumepy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "mistune>=3.0",
    "playwright>=1.60.0",
    "pymupdf>=1.23",
]

[project.scripts]
resumepy = "resumepy.cli:cli"

[dependency-groups]
dev = ["pytest>=8.0"]
